tests/ui/resolve/missing-associated-items.stderr
error[E0599]: no variant or associated item named `Homura` found for enum `Token` in the current scope
  --> $DIR/missing-associated-items.rs:17:23
   |
LL | enum Token {
   | ---------- variant or associated item `Homura` not found for this enum
...
LL |     use_token(&Token::Homura);
   |                       ^^^^^^ variant or associated item not found in `Token`

error[E0599]: no function or associated item named `method` found for struct `Struct` in the current scope
  --> $DIR/missing-associated-items.rs:18:13
   |
LL | struct Struct {
   | ------------- function or associated item `method` not found for this struct
...
LL |     Struct::method();
   |             ^^^^^^ function or associated item not found in `Struct`

error[E0599]: no function or associated item named `method` found for struct `Struct` in the current scope
  --> $DIR/missing-associated-items.rs:19:13
   |
LL | struct Struct {
   | ------------- function or associated item `method` not found for this struct
...
LL |     Struct::method;
   |             ^^^^^^ function or associated item not found in `Struct`

error[E0599]: no associated item named `Assoc` found for struct `Struct` in the current scope
  --> $DIR/missing-associated-items.rs:20:13
   |
LL | struct Struct {
   | ------------- associated item `Assoc` not found for this struct
...
LL |     Struct::Assoc;
   |             ^^^^^ associated item not found in `Struct`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
